; ModuleID = '/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_ts.c_gbt_ts_dist.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_ts.c_gbt_ts_dist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timestamp_mi = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32*)* @gbt_ts_dist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gbt_ts_dist(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %8, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = bitcast i8* %13 to i32*
  store i32* %14, i32** %9, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @TIMESTAMP_NOT_FINITE(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %3
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @TIMESTAMP_NOT_FINITE(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %19, %3
  %25 = call i32 (...) @get_float8_infinity()
  store i32 %25, i32* %4, align 4
  br label %39

26:                                               ; preds = %19
  %27 = load i32, i32* @timestamp_mi, align 4
  %28 = load i32*, i32** %8, align 8
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @TimestampGetDatumFast(i32 %29)
  %31 = load i32*, i32** %9, align 8
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @TimestampGetDatumFast(i32 %32)
  %34 = call i32 @DirectFunctionCall2(i32 %27, i32 %30, i32 %33)
  %35 = call i32* @DatumGetIntervalP(i32 %34)
  store i32* %35, i32** %10, align 8
  %36 = load i32*, i32** %10, align 8
  %37 = call i32 @INTERVAL_TO_SEC(i32* %36)
  %38 = call i32 @Abs(i32 %37)
  store i32 %38, i32* %4, align 4
  br label %39

39:                                               ; preds = %26, %24
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i64 @TIMESTAMP_NOT_FINITE(i32) #1

declare dso_local i32 @get_float8_infinity(...) #1

declare dso_local i32* @DatumGetIntervalP(i32) #1

declare dso_local i32 @DirectFunctionCall2(i32, i32, i32) #1

declare dso_local i32 @TimestampGetDatumFast(i32) #1

declare dso_local i32 @Abs(i32) #1

declare dso_local i32 @INTERVAL_TO_SEC(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
